RESOLVED FIXED101525
[V8] Don't leak <img> elements in content scripts
https://bugs.webkit.org/show_bug.cgi?id=101525
Summary [V8] Don't leak <img> elements in content scripts
Adam Barth
Reported 2012-11-07 17:21:11 PST
[V8] Don't leak <img> elements in content scripts
Attachments
Patch (5.71 KB, patch)
2012-11-07 17:23 PST, Adam Barth
ojan: review+
Adam Barth
Comment 1 2012-11-07 17:23:17 PST
Ojan Vafai
Comment 2 2012-11-07 17:26:01 PST
Comment on attachment 172897 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=172897&action=review > Source/WebCore/bindings/v8/DOMDataStore.cpp:81 > + ASSERT(object = static_cast<Node*>(toNative(wrapper))); Nit: move this above line 79 since it doesn't actually use info?
Adam Barth
Comment 3 2012-11-07 17:27:44 PST
Comment on attachment 172897 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=172897&action=review >> Source/WebCore/bindings/v8/DOMDataStore.cpp:81 >> + ASSERT(object = static_cast<Node*>(toNative(wrapper))); > > Nit: move this above line 79 since it doesn't actually use info? Will do.
Adam Barth
Comment 4 2012-11-07 17:30:05 PST
Kentaro Hara
Comment 5 2012-11-07 23:39:54 PST
Comment on attachment 172897 [details] Patch LGTM too.
Note You need to log in before you can comment on or make changes to this bug.