[V8] Don't leak <img> elements in content scripts https://bugs.webkit.org/show_bug.cgi?id=101525

Reviewed by Ojan Vafai.

I found the leak that was causing a problem for bug 101110. We weren't
filling in the derefObjectFunction for HTMLImageElements (and
potentially some other types of elements). That manifests today as a
memory leak in content scripts (which use the derefObjectFunction for
nodes) and caused a memory leak after bug 101110 because we started
using the derefObjectFunction in the main world as well.

This patch adds ASSERTs so that we won't make this mistake in the future.

* bindings/scripts/CodeGeneratorV8.pm:
(GenerateNamedConstructorCallback):
* bindings/v8/DOMDataStore.cpp:
(WebCore::DOMDataStore::weakCallback):
* bindings/v8/DOMWrapperMap.h:
(WebCore::DOMWrapperMap::defaultWeakCallback):
* bindings/v8/custom/V8HTMLImageElementConstructor.cpp:
(WebCore):


Canonical link: https://commits.webkit.org/119625@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133829 268f45cc-cd09-0410-ab3c-d52691b4dbfc